--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<enl-example-ng6-lib></enl-example-ng6-lib>
-<enl-loader [loadingText]="true" ></enl-loader>
+<!-- <enl-example-ng6-lib></enl-example-ng6-lib> -->
+<techverx-loader [loadingText]="true" ></techverx-loader>
